--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <title>GitHub 02</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
     
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.auth.js"></script>
-    <script src="js/fb.js"></script>
+    <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyC2sjNyoZSfiKzIP3P7UHOkOwCcG7ptdJM",
+    authDomain: "ricardosantiago96-772ba.firebaseapp.com",
+    projectId: "ricardosantiago96-772ba",
+    storageBucket: "ricardosantiago96-772ba.appspot.com",
+    messagingSenderId: "876852688931",
+    appId: "1:876852688931:web:2a5bf3a21dc488ae261996",
+    measurementId: "G-06DSK8T6WV"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   </head>
   <body>
       <h1>Autenfificación</h1>
